--- a/package.json
+++ b/package.json
@@ -25,20 +25,16 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-standard": "^3.1.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-babel": "^7.0.1",
     "gulp-eslint": "^5.0.0",
-    "gulp-istanbul": "^1.1.3",
-    "gulp-mocha": "^3.0.1",
-    "gulp-util": "^3.0.8",
-    "isparta": "^4.1.0",
-    "jsdom": "^12.0.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "nyc": "^13.1.0"
   },
   "scripts": {
-    "test": "gulp",
     "deploy": "./publish.sh",
-    "coveralls": "cat coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+    "test": "gulp && nyc --reporter=html --reporter=text mocha --reporter nyan test/*.js",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
